--- a/less/qvortrup.less
+++ b/less/qvortrup.less
@@ -20,11 +20,20 @@ a {
     background-color: #0f0;
     height: 56px;
     color: #fff;
-    text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
-    padding: 2px 0 0 15px;
     font-family: "ff-meta-web-pro", sans-serif;
-    font-size: 16px;
-    line-height: 16px;
+    font-size: 15px;
+    line-height: 15px;
+
+    p {
+      position: absolute;
+      top: -15px;
+      left: 30px;
+      width: 17px;
+      height: 17px;
+      background-color: #f00;
+      border-radius: 50%;
+      text-align: center;
+    }
   }
   #player1 {
     width: 45px;
