Added reload button to final message

--- a/less/qvortrup.less
+++ b/less/qvortrup.less
@@ -54,7 +54,7 @@ a {
     background: transparent url(../img/q4.png) no-repeat;
   }
 
-  #instructions, #controls, #done, #message {
+  #instructions, #controls, #message {
     position: absolute;
     top: 160px;
     left: 15px;
@@ -99,7 +99,7 @@ a {
     -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
 
-    a#dismiss {
+    a#dismiss, a#reload {
       font-family: "ff-meta-web-pro", sans-serif;
       font-weight: 700;
       color: #fff;
